5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1642_87.log
== TEST (2019-04-12 13:47:24) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

print(d1,d2,d3)


-- OUTPUT:
False True True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:48:39) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a > b >c):
	print(a)
print(d1,d2,d3)


-- OUTPUT:
False True True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:48:46) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a > b >c):
	print(a)
print(d1,d2,d3)


-- OUTPUT:
False True True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:49:01) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a > b >c):
	print(a)
print(d1,d2,d3)


-- OUTPUT:
False True True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:51:30) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a < b < c or a < c < b ):
	print(a)
	
if(a < c < b)



-- ERROR:
File "XXXX", line 14
    if(a < c < b)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:51:35) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a < b < c or a < c < b ):
	print(a)



-- ERROR:
File "XXXX", line 14
    if(a < c < b)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:51:40) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a < b < c or a < c < b ):
	print(a)



-- ERROR:
File "XXXX", line 14
    if(a < c < b)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:51:46) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a < b < c or a < c < b ):
	print(a)



-- ERROR:
File "XXXX", line 14
    if(a < c < b)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:53:09) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a < b < c or a < c < b ):
	print(a)

if(b < a < c or b < c < a):
	print(b)
	
if(c < a < b or c < b < a):
	print(c)


-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:53:14) 
-- CODE:
import math

a = int(input("1. Numero: "))
b = int(input("2. Numero: "))
c = int(input("3. Numero: "))

d1 = a > b
d2 = b > c
d3 = a > c

if(a < b < c or a < c < b ):
	print(a)

if(b < a < c or b < c < a):
	print(b)
	
if(c < a < b or c < b < a):
	print(c)


-- EXECUTION TIME:
0.152524
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
